--- a/src/MvcMovie/Views/Movies/Edit.cshtml
+++ b/src/MvcMovie/Views/Movies/Edit.cshtml
@@ -34,6 +34,13 @@
             </div>
         </div>
         <div class="form-group">
+            <label asp-for="Rating" class="col-md-2 control-label"></label>
+            <div class="col-md-10">
+                <input asp-for="Rating" class="form-control" />
+                <span asp-validation-for="Rating" class="text-danger" />
+            </div>
+        </div>
+        <div class="form-group">
             <label asp-for="Title" class="col-md-2 control-label"></label>
             <div class="col-md-10">
                 <input asp-for="Title" class="form-control" />
