--- a/src/MvcMovie/Views/Movies/Create.cshtml
+++ b/src/MvcMovie/Views/Movies/Create.cshtml
@@ -26,6 +26,13 @@
             </div>
         </div>
         <div class="form-group">
+            <label asp-for="Duration" class="col-md-2 control-label"></label>
+            <div class="col-md-10">
+                <input asp-for="Duration" class="form-control" />
+                <span asp-validation-for="Duration" class="text-danger" />
+            </div>
+        </div>
+        <div class="form-group">
             <label asp-for="ReleaseDate" class="col-md-2 control-label"></label>
             <div class="col-md-10">
                 <input asp-for="ReleaseDate" class="form-control" />
