--- a/src/MvcMovie/Views/Movies/Details.cshtml
+++ b/src/MvcMovie/Views/Movies/Details.cshtml
@@ -40,6 +40,12 @@
         <dd>
             @Html.DisplayFor(model => model.Rating)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Duration)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Duration)
+        </dd>
     </dl>
 </div>
 <div>
