--- a/src/MvcMovie/Views/Shared/_Layout.cshtml
+++ b/src/MvcMovie/Views/Shared/_Layout.cshtml
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Movie App</title>
+    <script type="text/javascript" src="~/Scripts/imdbFetch.js"></script>
 
     <environment names="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
@@ -43,7 +44,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2017 - MvcMovie</p>
+            <p>&copy; 2018 - MvcMovie</p>
         </footer>
     </div>
 
@@ -64,6 +65,6 @@
         <script src="~/js/site.min.js" asp-append-version="true"></script>
     </environment>
 
-    @RenderSection("scripts", required: false)
+    @RenderSection("Scripts", required: false)
 </body>
 </html>
