--- a/src/MvcMovie/Views/Movies/Create.cshtml
+++ b/src/MvcMovie/Views/Movies/Create.cshtml
@@ -4,10 +4,12 @@
     ViewData["Title"] = "Create";
 }
 
-<h2>Create</h2>
+<h2 id="h4Movie">Create</h2>
 
+<script src="~/lib/jquery/dist/jquery.min.js"></script>
 <script type="text/javascript">
-    add();
+    
+    // SCRIPTING HERE!
 </script>
 
 <form asp-action="Create">
@@ -18,14 +20,14 @@
         <div class="form-group">
             <label asp-for="Title" class="col-md-2 control-label"></label>
             <div class="col-md-10">
-                <input asp-for="Title" class="form-control" id="titleInput"/>
+                <input asp-for="Title" class="form-control" id="titleInput" onblur="fetchIMDB()"/>
                 <span asp-validation-for="Title" class="text-danger" />
             </div>
         </div>
         <div class="form-group">
             <label asp-for="Genre" class="col-md-2 control-label"></label>
             <div class="col-md-10">
-                <input asp-for="Genre" class="form-control" />
+                <input asp-for="Genre" class="form-control" id="genre" />
                 <span asp-validation-for="Genre" class="text-danger" />
             </div>
         </div>
@@ -39,14 +41,14 @@
         <div class="form-group">
             <label asp-for="Duration" class="col-md-2 control-label"></label>
             <div class="col-md-10">
-                <input asp-for="Duration" class="form-control" />
+                <input asp-for="Duration" class="form-control" id="duration" />
                 <span asp-validation-for="Duration" class="text-danger" />
             </div>
         </div>
         <div class="form-group">
             <label asp-for="ReleaseDate" class="col-md-2 control-label"></label>
             <div class="col-md-10">
-                <input asp-for="ReleaseDate" class="form-control" />
+                <input asp-for="ReleaseDate" class="form-control" id="releaseDate" />
                 <span asp-validation-for="ReleaseDate" class="text-danger" />
             </div>
         </div>
